--- a/dev/static/styles/modules/index/hero.sass
+++ b/dev/static/styles/modules/index/hero.sass
@@ -42,3 +42,8 @@
             height: 17px
             margin-right: 10px
             fill: $accent
+    &__btn
+        +xs-block()
+            font-size: 10px
+            line-height: 14px
+            +sizebox(80px)
