--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -28,7 +28,11 @@
             animation: right-pulse 1s infinite ease-in-out
         .icon-arrow-left
             animation: left-pulse 1s infinite ease-in-out
-
+    &--flat
+        height: 50px
+        border-radius: 25px
+        padding-right: 30px
+        padding-left: 30px
 
     &--round
         border-radius: 50%
