--- a/dev/pug/modules/footer/footer.pug
+++ b/dev/pug/modules/footer/footer.pug
@@ -1,5 +1,5 @@
 -
-    let icones = [
+    let icons = [
         {
             name: 'Agima',
             link: '#',
@@ -34,3 +34,4 @@ footer.b-footer
             each icon in icons
                 a(href= icon.link, title= icon.name)._icon
                     +icon(icon.icon, 'footer__social-icon')
+
