--- a/dev/pug/modules/header/header.pug
+++ b/dev/pug/modules/header/header.pug
@@ -57,30 +57,37 @@
     ]
 
 header.b-header
-    ._top-line
-        ._logo
-            +icon('logo', 'header__logo-icon')
-        ._links
-            ._city
-                a._link.link--icon#cityView(href='#', title='Брянск')
-                    | Брянск
-                    +icon('triangle-down')
-                ._cities
-                    ul._subcities
-                        each city in cities
-                            li._subcity
-                                a._link(href= city.link, title= city.name)= city.name
+    .wrapper
+        ._top-line
+            ._top-left
+                ._logo
+                    +icon('logo', 'header__logo-icon')
+                ._showreel
+                    a._link.link--icon(data-fancybox, href="https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0")
+                        +icon('triangle-right')
+                        | Showreel
+            ._top-right
 
+                ._phone
+                    a._link(href='tel:+78005512557', title='8 (800) 551-25-57') 8 (800) 551-25-57
+                ._city
+                    a._link.link--icon#cityView(href='#', title='Брянск')
+                        | Брянск
+                        +icon('triangle-down')
+                    ._cities
+                        ul._subcities
+                            each city in cities
+                                li._subcity
+                                    a._link(href= city.link, title= city.name)= city.name
 
-            ._phone
-                a._link(href='tel:+78005512557', title='8 (800) 551-25-57') 8 (800) 551-25-57
-        nav.b-main-nav._main-nav
-            ul._items
-                each item in nav
-                    li._item
-                        a(href=item.link, title=item.name)._link= item.name
+                button.b-btn.-flat(data-target='consultation') Заказать консультацию
+                //nav.b-main-nav._main-nav
+                    ul._items
+                        each item in nav
+                            li._item
+                                a(href=item.link, title=item.name)._link= item.name
 
-            .b-sandwich._sandwich
-                ._line.-top
-                ._line.-middle
-                ._line.-bottom
+                .b-sandwich._sandwich
+                    ._line.-top
+                    ._line.-middle
+                    ._line.-bottom
