--- a/dev/pug/template/main.pug
+++ b/dev/pug/template/main.pug
@@ -20,8 +20,8 @@ html(lang="ru-RU")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js")
 		<![endif]-->
 	body
-		.wrapper
-			include ../modules/header/header
+		include ../modules/header/header
+		.wrapper.before-fix
 			.content
 				block content
 			include ../modules/footer/footer
