Action for button popup

--- a/dev/pug/modules/footer/footer.pug
+++ b/dev/pug/modules/footer/footer.pug
@@ -26,7 +26,7 @@ footer.b-footer
     ._col
         ._copy © 2010–2020, ITC MEDIA агентство интернет-маркетинга #[a(href="mailto:manager@itc-media.ru") manager@itc-media.ru]
     ._col.footer__btn-wrap
-        button.b-btn.-round.-big._btn
+        button(data-action='popup', data-target='consultation').b-btn.-round.-big._btn
             +icon('plus', 'btn__icon-plus')
             | Заказать  консультацию
     ._col
