--- a/dev/pug/pages/index/hero.pug
+++ b/dev/pug/pages/index/hero.pug
@@ -4,7 +4,7 @@ section.section
         ._text
             ._title Продвигаем  бизнес в интернете
         ._action
-            button.b-btn.-round.-big._btn
+            button(data-action='popup', data-target='consultation').b-btn.-round.-big._btn
                 +icon('plus', 'btn__icon-plus')
                 | Заказать  консультацию
 
