--- a/dev/static/styles/modules/popups/popups.sass
+++ b/dev/static/styles/modules/popups/popups.sass
@@ -7,6 +7,7 @@
     z-index: 50
     background-color: rgba($accent, .85)
     backdrop-filter: blur(6px)
+    display: none
 .popup
     background-color: $white
     padding: 40px 50px 60px
@@ -15,6 +16,16 @@
     top: 50%
     left: 50%
     transform: translate(-50%, -50%)
+    min-width: 480px
+    display: none
+    +xs-block()
+        transform: translate(0,0)
+        top: 0
+        left: 0
+        bottom: 0
+        min-width: 100%
+        width: 100%
+        padding: 60px 20px
 
     &__close
         position: absolute
@@ -30,6 +41,9 @@
         line-height: 55px
         font-weight: 100
         margin-bottom: 35px
+        +xs-block()
+            font-size: 30px
+            line-height: 38px
 
     &__form
         display: flex
@@ -43,6 +57,11 @@
         padding-right: 30px
         border: none
         margin-bottom: 20px
+        +xs-block()
+            font-size: 16px
+            line-height: 24px
+            padding-right: 13px
+            padding-left: 13px
         &:focus
             outline: none
 
@@ -53,6 +72,8 @@
 
     &__input
         height: 48px
+        +xs-block()
+            height: 45px
 
     &__checkbox
         opacity: 0
@@ -79,6 +100,9 @@
         line-height: 22px
         font-weight: 100
         margin-bottom: 20px
+        +xs-block()
+            font-size: 13px
+            line-height: 17px
 
         &::before
             position: absolute
@@ -93,4 +117,6 @@
 
     &__btn
         align-self: flex-start
+        +xs-block()
+            align-self: stretch
 
