--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -22,7 +22,8 @@
             stroke: $white
 
         .icon-plus,
-        .icon-empty_triangle
+        .icon-empty_triangle,
+        .icon-user
             animation: pulse 1s infinite ease-in-out
         .icon-arrow:not(.btn__icon-arrow-left)
             animation: right-pulse 1s infinite ease-in-out
@@ -59,6 +60,7 @@
                 stroke: $accent
     &--light
         border: 1px solid $white
+        color: $white
         svg
             stroke: $white
             fill: $white
@@ -82,6 +84,9 @@
         &-arrow
             width: 38px
             height: 29px
+        &-user
+            +sizebox(40px)
+            margin-bottom: 21px
 
         &-next-arrow
             width: 38px
