Desktop megamenu animation

--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -49,6 +49,8 @@
     z-index: 10
     background-color: rgba($white, .95)
     backdrop-filter: blur(6px)
+    transition: all .5s cubic-bezier(.785,.135,.15,.86)
+
 
     &__top-line
         display: flex
