--- a/dev/pug/modules/header/header.pug
+++ b/dev/pug/modules/header/header.pug
@@ -15,7 +15,7 @@ header.b-header
                 ._phone
                     a._link(href='tel:+78005512557', title='8 (800) 551-25-57') 8 (800) 551-25-57
                 ._city
-                    a._link.link--icon#cityView(href='#', title='Брянск')
+                    a._link.link--icon.city-view(href='#', title='Брянск')
                         | Брянск
                         +icon('triangle-down')
                     ._cities
@@ -26,9 +26,9 @@ header.b-header
 
                 button.b-btn.-flat._btn(data-action='popup', data-target='consultation') Заказать консультацию
 
-                .b-sandwich._sandwich
-                    ._line.-top
-                    ._line.-middle
-                    ._line.-bottom
+            .b-sandwich._sandwich
+                ._line.-top
+                ._line.-middle
+                ._line.-bottom
 
 include megamenu
