Remove cities, phone and button from megamenu

--- a/dev/pug/pages/index/cases.pug
+++ b/dev/pug/pages/index/cases.pug
@@ -41,7 +41,7 @@
 section.section
     .b-cases
         h2.h2._title Кейсы
-        ._cards
+        ._cards(date-img-src='images/content/cases/case-1.jpg')
             each card in cases
                 a(href=card.link, title=card.name)._card
                     .h3._card-title= card.name
