--- a/dev/static/styles/modules/index/cases.sass
+++ b/dev/static/styles/modules/index/cases.sass
@@ -18,7 +18,7 @@
         transition: all .8s ease
         &:hover,
         &:focus
-            background-color: $black
+            background-image: url(attr(data-img-src))
             color: $white
             & .cases__btn-wrap
                 width: 30%
