--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -122,7 +122,8 @@ button
 .h2
     font-size: 45px
     line-height: 50px
-    font-weight: 200
+    font-weight: 500
+    font-style: normal
     margin-bottom: 55px
     +xs-block()
         font-size: 35px
