Add counter for feedback

--- a/dev/pug/pages/index/feedback.pug
+++ b/dev/pug/pages/index/feedback.pug
@@ -40,10 +40,12 @@ section.section
                                 ._text= item.text
                                 if item.original
                                     a(href= item.original, title="Оригинал отзыва " + item.name)._original Смотреть оригинал
-            ._navigation
-                ._prev
-                    button.b-btn.-round._btn
-                        +icon('arrow-left', 'btn__icon-arrow btn__icon-arrow-left')
-                ._next
-                    button.b-btn.-round._btn
-                        +icon('arrow', 'btn__icon-arrow')
+            ._controls
+                ._counter
+                ._navigation
+                    ._prev
+                        button.b-btn.-round._btn
+                            +icon('arrow-left', 'btn__icon-arrow btn__icon-arrow-left')
+                    ._next
+                        button.b-btn.-round._btn
+                            +icon('arrow', 'btn__icon-arrow')
