--- a/dev/pug/pages/index/latest-post.pug
+++ b/dev/pug/pages/index/latest-post.pug
@@ -3,9 +3,8 @@ section.section
     .b-latest-post
         ._title-wrap
             h2.h2._title Блог
-            ._btn-wrap.desktop-none
-                    button.b-btn.-round.-big._btn
-                        | Подписаться на рассылку
+            button.b-btn.-flat._btn
+                | Подписаться на рассылку
         ._items
             ._item
                 ._category Интернет-маркетинг
@@ -17,6 +16,8 @@ section.section
                 a(href="#", title="Вся правда про SSL-сертификаты", style="background-image: url(images/content/ssl.jpg)")._img
                 a(href="#", title="Вся правда про SSL-сертификаты")._name
                     | Вся правда про SSL-сертификаты
-            ._btn-wrap.mobile-none
-                button.b-btn.-round.-big._btn
-                    | Подписаться на рассылку
+            ._item
+                ._category Разработка
+                a(href="#", title="Вся правда про SSL-сертификаты", style="background-image: url(images/content/ssl.jpg)")._img
+                a(href="#", title="Вся правда про SSL-сертификаты")._name
+                    | Заголовок 3
