--- a/dev/static/styles/modules/index/counters.sass
+++ b/dev/static/styles/modules/index/counters.sass
@@ -23,6 +23,7 @@
         align-items: center
         font-size: 80px
         line-height: 90px
+        font-weight: 500
         margin-bottom: 5px
         +md-block()
             font-size: 40px
