--- a/dev/static/styles/modules/index/latest-post.sass
+++ b/dev/static/styles/modules/index/latest-post.sass
@@ -7,7 +7,7 @@
         +size-sm(12)
     &__title-wrap
         display: flex
-        align-items: center
+        align-items: flex-start
         justify-content: space-between
         +sm-block()
             margin-bottom: 40px
@@ -27,20 +27,9 @@
         margin-bottom: 40px
 
     &__btn-wrap
-        +col()
-        +size(4)
-        +size-sm(8)
+
         display: flex
         justify-content: center
-        padding-top: 50px
         +sm-block()
             justify-content: flex-end
             padding-top: 0
-    &__btn
-        +sizebox(194px)
-        font-size: 20px
-        line-height: 27px
-        +sm-block()
-            +sizebox(150px)
-            font-size: 17px
-            line-height: 23px
