--- a/dev/static/styles/modules/main-nav/main-nav.sass
+++ b/dev/static/styles/modules/main-nav/main-nav.sass
@@ -43,21 +43,21 @@
             .megamenu__item
                 +delayLoop()
             +size-sm(4)
-            +md-block()
+            +sm-block()
                 order: 2
         &:nth-child(2)
             +size(6)
             .megamenu__item
                 +delayLoop(0.6)
             +size-sm(8)
-            +md-block()
+            +sm-block()
                 order: 1
         &:nth-child(3)
             +size(1)
             display: flex
             align-self: flex-start
-            +size-md(12)
-            +md-block()
+            +size-sm(12)
+            +sm-block()
                 order: 3
                 margin-top: 30px
 
@@ -79,7 +79,7 @@
         display: flex
         flex-direction: column
         justify-content: space-between
-        +md-block()
+        +sm-block()
             padding-top: 30px
             flex-direction: row
             justify-content: center
