--- a/dev/static/styles/modules/index/cases.sass
+++ b/dev/static/styles/modules/index/cases.sass
@@ -19,26 +19,17 @@
         position: relative
         &:hover,
         &:focus
+            background-color: $black
             color: $white
             & .cases__btn-wrap
                 width: 30%
                 margin-right: 4%
                 +xs-block()
                     width: 25%
-        &::before
-            content: ''
-            display: block
-            background-image: url(attr(data-img-src))
-            background-repeat: no-repeat
-            position: absolute
-            background-size: cover
-            background-position: center center
-            top: 0
-            bottom: 0
-            left: 0
-            right: 0
-            z-index: 3
-
+            & .cases__hover-card
+                opacity: 1
+        & > *
+            z-index: 4
         &-title
             font-size: 40px
             line-height: 50px
@@ -54,6 +45,30 @@
             display: flex
             align-items: center
 
+    &__hover-card
+        position: absolute
+        top: 0
+        bottom: 0
+        left: 0
+        right: 0
+        background-position: center center
+        -webkit-background-size: cover
+        background-size: cover
+        background-repeat: no-repeat
+        z-index: 2
+        opacity: 0
+        transition: all .3s ease
+        &::after
+            position: absolute
+            content: ''
+            display: block
+            top: 0
+            bottom: 0
+            left: 0
+            right: 0
+            z-index: 3
+            background-color: rgba($accent, .4)
+            backdrop-filter: blur(6px)
     &__btn
         +xs-block()
             +sizebox(50px)
