--- a/dev/pug/pages/index/taber.pug
+++ b/dev/pug/pages/index/taber.pug
@@ -3,7 +3,7 @@
     var tabs = [
         {
             title: 'Поисковое продвижение',
-            text: 'Продвигаем по трафику, позициям и часам. Ставим четкие и понятные цели, строим стратегию продвижения на полгода вперед.',
+            text: 'Продвигаем по трафику, позициям и часам. Ставим, строим стратегию продвижения на полгода вперед.',
             link: '#',
         },
         {
@@ -13,17 +13,17 @@
         },
         {
             title: 'Продвижение в соцсетях',
-            text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci atque dolorum maiores quidem sequi.',
+            text: 'Lorem  consectetur adipisicing elit. Accusantium adipisci atque dolorum maiores quidem sequi.',
             link: '#',
         },
         {
             title: 'Разработка сайтов',
-            text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci atque dolorum maiores quidem sequi.',
+            text: 'Lorem ipsum dolor sit amet, elit. Accusantium adipisci atque dolorum maiores quidem sequi.',
             link: '#',
         },
         {
             title: 'Поддержка сайтов',
-            text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci atque dolorum maiores quidem sequi.',
+            text: 'Lorem ipsum dolor sit  adipisicing elit. Accusantium adipisci atque dolorum maiores quidem sequi.',
             link: '#',
         },
     ]
@@ -38,6 +38,6 @@ section.section
             ul._cards
                 each item, index in tabs
                     div(id="tab-num-" + (index + 1), class= index === 0 ? 'active' : '')._card
-                        p._text= item.text
-                        a(href=item.link, title=item.title).b-btn.-round.-small.-light._btn
-                            +icon('arrow', 'btn__icon-arrow')
+                        p= item.text
+                        p
+                            a(href=item.link, title=item.title)._link подробнее…
