--- a/dev/static/styles/modules/index/taber.sass
+++ b/dev/static/styles/modules/index/taber.sass
@@ -78,26 +78,23 @@
             line-height: 24px
     &__card
         display: none
-        justify-content: space-between
-        align-items: center
+        flex-direction: column
+        padding-left: 30px
         &.active
             display: flex
-    &__text
-        line-height: 27px
-        padding-left: 30px
-        +sm-block()
-            padding-left: 0
-        +xs-block()
-            font-size: 16px
-            line-height: 20px
+        p
+            line-height: 27px
+            +sm-block()
+                padding-left: 0
+            +xs-block()
+                font-size: 16px
+                line-height: 20px
+            &:not(:last-child)
+                margin-bottom: 20px
 
-    &__btn
-        min-width: 76px
-        margin-left: 54px
-        +xs-block()
-            +sizebox(50px)
-            margin-left: 20px
-            min-width: 50px
-            min-height: 50px
-            svg
-                width: 25px
+    &__link
+        color: $white
+        opacity: .6
+        text-decoration: underline
+        font-weight: 100
+        font-size: .8em
