--- a/dev/static/styles/libs.sass
+++ b/dev/static/styles/libs.sass
@@ -1,3 +1,4 @@
 @import "../../../node_modules/normalize.css/normalize"
 @import "../../../node_modules/owl.carousel/dist/assets/owl.carousel.min"
+//@import "../../../node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"
 //@import "../../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min"
