Styling social buttons for mobile

--- a/dev/static/styles/modules/index/taber.sass
+++ b/dev/static/styles/modules/index/taber.sass
@@ -6,8 +6,9 @@
     color: $white
     +sm-block()
         flex-wrap: wrap
+        padding: 30px 30px 10px
     +xs-block()
-        padding: 30px 20px
+        padding: 30px 20px 10px
 
     &__left
         width: 50%
@@ -46,6 +47,7 @@
             display: flex
             overflow: scroll
             overflow-scrolling: touch
+            padding-bottom: 20px !important
     &__title-item
         opacity: .5
         transition: all .5s ease
