--- a/dev/static/styles/modules/index/showreel.sass
+++ b/dev/static/styles/modules/index/showreel.sass
@@ -31,6 +31,9 @@
         +xs-block()
             font-size: 20px
             line-height: 27px
+            text-align: center
+            margin-bottom: 0
+
     &__items
         +sm-block()
             display: none
