Styling taber hover link

--- a/dev/static/styles/modules/index/taber.sass
+++ b/dev/static/styles/modules/index/taber.sass
@@ -125,6 +125,10 @@
         text-decoration: underline
         font-weight: 100
         font-size: .8em
+        &:hover, &:focus
+            color: $white
+            text-decoration: none
+            opacity: 1
 //
 //.mCSB_container
 //    display: flex
