--- a/dev/static/styles/modules/index/cases.sass
+++ b/dev/static/styles/modules/index/cases.sass
@@ -58,6 +58,8 @@
         z-index: 2
         opacity: 0
         transition: all .3s ease
+        +sm-block()
+            transition: all 0s
         &::after
             position: absolute
             content: ''
